--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
    
-        <p>Hallo Welt</p>
+        <p>Hallo Mensch</p>
+ 
         <script src="js/script.js"></script>
 
 </body>
