--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    
         <p>Hallo Mensch</p>
         <h2>Karina work</h2>
+        <h3>merge</h3>
         <script src="js/script.js"></script>
 
 </body>
